[WDEVS-TEST] add init custom block and configuration to apply block content

--- a/CustomBar/view/frontend/templates/topbar.phtml
+++ b/CustomBar/view/frontend/templates/topbar.phtml
@@ -2,7 +2,10 @@
 /**
  * @var $block \Wdevs\CustomBar\Block\TopBar
  */
+$content = $block->displayCustomBar();
 ?>
-<div>
-    <?= $block->displayCustomBar() ?>
-</div>
+<?php if ($content): ?>
+    <div>
+        <?= $content ?>
+    </div>
+<?php endif; ?>
